# orion-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml
benches/: context_bench.rs
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: agent.md  architecture.md  backend.md  context.md  errors.md  events.md  messages.md  templates.md  tools.md
docs/src/content/docs/reference/: examples.md
docs/src/content/docs/start/: getting-started.md
docs/src/styles/: global.css
examples/: mock_backend.rs  openai_backend.rs
src/: agent.rs  backend.rs  backends.rs  context.rs  error.rs  events.rs  lib.rs  messages.rs  template.rs  tools.rs
tests/: approval_tests.rs  context_tests.rs  http_backend_tests.rs  prune_props.rs  prune_tests.rs  template_tests.rs  tool_tests.rs  usage_tests.rs
